Fixed sizing on small-card

--- a/packages/payment-gateway/src/assets/stylesheets/components/small-card.scss
+++ b/packages/payment-gateway/src/assets/stylesheets/components/small-card.scss
@@ -3,6 +3,6 @@
     max-width: 35em;
     background-color: #F5F5F8;
     border-radius: 1em;
-    padding: 1em 2em 2em 2em;
+    padding: 1em 2em 1em 2em;
 
 }
